--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,10 +14,11 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:onClick="@{() -> viewModel.shuffleWord()}"
-            android:text="shuffle"
+            android:text="@string/shuffle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/origin_text" />
+            app:layout_constraintTop_toBottomOf="@id/origin_text"
+            app:word="@{viewModel.word}" />
 
         <Button
             android:id="@+id/save_button"
@@ -25,10 +26,11 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:onClick="@{() -> viewModel.saveWord()}"
-            android:text="save"
+            android:text="@string/save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/shuffle_text" />
+            app:layout_constraintTop_toBottomOf="@id/shuffle_text"
+            app:word="@{viewModel.shuffledWord}" />
 
         <EditText
             android:id="@+id/edit_text"
