--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginVertical="10dp"
-            android:text="@={viewModel.shuffledWord}"
+            android:text="@{viewModel.shuffledWord}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/shuffle_button" />
