[Update] EditText hint

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -36,6 +36,9 @@
             android:id="@+id/edit_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:autofillHints="no"
+            android:hint="@string/edit_text_hint"
+            android:inputType="text"
             android:text="@={viewModel.word}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
